--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -42,6 +42,7 @@ module:
   hms_field: 0
   image: 0
   inline_entity_form: 0
+  inline_responsive_images: 0
   kint: 0
   language: 0
   link: 0
@@ -61,6 +62,7 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  responsive_image: 0
   responsive_tables_filter: 0
   search: 0
   shortcut: 0
