Dateien Root Ebene Core Update

--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,10 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "composer/installers": "^1.0.24",
-        "wikimedia/composer-merge-plugin": "^1.4",
-        "drush/drush": "^9.2"
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "replace": {
-        "drupal/core": "^8.5"
+        "drupal/core": "^8.6"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
