--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/user.role.chefredakteur.yml
@@ -25,6 +25,7 @@ permissions:
   - 'skip comment approval'
   - 'translate interface'
   - 'use text format basic_html'
+  - 'use text format full_html'
   - 'use text format tables_only'
   - 'view any unpublished content'
   - 'view any webform submission'
