--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.contact_message.feedback.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.contact_message.feedback.default.yml
@@ -15,6 +15,8 @@ content:
   copy:
     weight: 50
     region: content
+    settings: {  }
+    third_party_settings: {  }
   field_contact_privacy_notice:
     weight: 51
     settings: {  }
@@ -31,6 +33,8 @@ content:
   mail:
     weight: -40
     region: content
+    settings: {  }
+    third_party_settings: {  }
   message:
     type: string_textarea
     weight: 0
@@ -42,9 +46,13 @@ content:
   name:
     weight: -50
     region: content
+    settings: {  }
+    third_party_settings: {  }
   preview:
     weight: 40
     region: content
+    settings: {  }
+    third_party_settings: {  }
   subject:
     type: string_textfield
     weight: -10
