--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.rss.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.rss.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.rss
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_gallery_above_body
+    - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - node.type.article
@@ -21,9 +23,13 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   body: true
   comment: true
+  field_gallery_above_body: true
+  field_gallery_below_body: true
   field_image: true
   field_tags: true
   langcode: true
