--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.event.teaser.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.event.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_ev_start_time
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_room
+    - field.field.node.event.field_event_type
     - node.type.event
   module:
     - text
@@ -30,10 +31,13 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_ev_date: true
   field_ev_end_time: true
   field_ev_start_time: true
   field_event_location: true
   field_event_room: true
+  field_event_type: true
   langcode: true
