--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/eu_cookie_compliance.settings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/eu_cookie_compliance.settings.yml
@@ -17,7 +17,7 @@ popup_clicking_confirmation: false
 popup_scrolling_confirmation: false
 popup_delay: 1000
 show_disagree_button: false
-popup_disagree_button_message: 'Give me more info'
+popup_disagree_button_message: 'Weitere Informationen'
 popup_enabled: true
 popup_find_more_button_message: 'Weitere Informationen'
 popup_height: null
@@ -45,3 +45,14 @@ better_support_for_screen_readers: false
 use_mobile_message: false
 _core:
   default_config_hash: OlBvbDcm2PUT2i28p3oNpuKaUKbbK4qjfrAyYxvd0B8
+method: default
+disagree_button_label: 'No, thanks'
+disabled_javascripts: ''
+whitelisted_cookies: ''
+consent_storage_method: do_not_store
+withdraw_message:
+  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>You have given your consent for us to set cookies.</p>'
+  format: basic_html
+withdraw_action_button_label: 'Withdraw consent'
+withdraw_tab_button_label: 'Privacy settings'
+withdraw_enabled: false
