Paragraphs Features Modul, hat neuere Version von Entity Reference Revisions installiert, weitere Verbesserung Paragraph Typ für PGN und Text

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
-        "drush/drush": "^9.5"
+        "drush/drush": "^9.5",
+        "drupal/paragraphs_features": "^1.4"
     },
     "replace": {
         "drupal/core": "^8.6"
