--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.article.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.article.default.yml
@@ -8,12 +8,14 @@ dependencies:
     - field.field.node.article.field_gallery_above_body
     - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
+    - field.field.node.article.field_new_par_various
     - field.field.node.article.field_tags
     - image.style.thumbnail
     - node.type.article
   module:
     - image
     - paragraphs
+    - paragraphs_features
     - path
     - text
 _core:
@@ -34,7 +36,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -52,7 +54,7 @@ content:
     region: content
   field_gallery_below_body:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -70,9 +72,32 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     region: content
+  field_new_par_various:
+    type: paragraphs
+    weight: 4
+    settings:
+      title: Absatz
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: _none
+      features:
+        duplicate: '0'
+        collapse_edit_all: '0'
+        add_above: '0'
+    third_party_settings:
+      paragraphs_features:
+        add_in_between: true
+        delete_confirmation: false
+        split_text: false
+    region: content
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -81,14 +106,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 5
+    weight: 6
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   node_class:
     type: string_textfield
-    weight: 12
+    weight: 13
     region: content
     settings:
       size: 60
@@ -96,7 +121,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -104,21 +129,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 121
+    weight: 14
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 11
     third_party_settings: {  }
     region: content
   title:
@@ -131,7 +156,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
