--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.article.field_gallery_above_body
     - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
+    - field.field.node.article.field_new_par_various
     - field.field.node.article.field_tags
     - image.style.large
     - node.type.article
@@ -41,7 +42,7 @@ content:
     region: content
   field_gallery_below_body:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 4
     label: visually_hidden
     settings:
       view_mode: default
@@ -57,16 +58,25 @@ content:
     third_party_settings: {  }
     label: hidden
     region: content
+  field_new_par_various:
+    type: entity_reference_revisions_entity_view
+    weight: 3
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_tags:
     type: entity_reference_label
-    weight: 4
+    weight: 5
     label: above
     settings:
       link: true
     third_party_settings: {  }
     region: content
   links:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
