--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -39,6 +39,7 @@ module:
   help: 0
   history: 0
   hms_field: 0
+  hsk_pgn_formatter: 0
   image: 0
   inline_entity_form: 0
   inline_responsive_images: 0
@@ -58,6 +59,7 @@ module:
   options: 0
   override_node_options: 0
   page_cache: 0
+  paragraphs_features: 0
   path: 0
   quickedit: 0
   rdf: 0
