--- a/modules/custom/hsk_pgn_formatter/hsk_pgn_formatter.libraries.yml
+++ b/modules/custom/hsk_pgn_formatter/hsk_pgn_formatter.libraries.yml
@@ -4,10 +4,10 @@ pgn_viewer:
       'https://pgn.chessbase.com/CBReplay.css': { type: external }
   js:
     #js/hsk_jquerynoconflict.js: {}
-    #'https://pgn.chessbase.com/jquery-3.0.0.min.js': { type: external }
+    # 'https://code.jquery.com/jquery-3.2.1.min.js': { type: external }
     # js/pgn_viewer.js: {}
-    #'https://pgn.chessbase.com/cbreplay.js': { type: external, attributes: { defer: true }  }
-    js/pgn_delay.js: {}
+    'https://pgn.chessbase.com/cbreplay.js': { type: external, attributes: { defer: true }  }
+    #js/pgn_delay.js: {}
   dependencies:
     - core/jquery
     - core/drupal
