Label für Paragraph Textfeld war verkehrt.

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.paragraph.text.field_txt_txt_text.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.paragraph.text.field_txt_txt_text.yml
@@ -31,7 +31,7 @@ id: paragraph.text.field_txt_txt_text
 field_name: field_txt_txt_text
 entity_type: paragraph
 bundle: text
-label: txt_txt_text
+label: Text
 description: ''
 required: false
 translatable: false
