--- a/themes/seven_hsk/seven_hsk.info.yml
+++ b/themes/seven_hsk/seven_hsk.info.yml
@@ -7,9 +7,8 @@ core: 8.x
 base theme: seven
 
 libraries:
-  - seven_presseclub/global-styling
-  - seven_presseclub/timepicker
-  - seven/global-styling
+  - seven_hsk/global-styling
+  - seven_hsk/timepicker
 libraries-override:
   core/drupal.vertical-tabs:
     css:
